Added Hyper Drone Project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Robert Penrod</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -55,10 +55,21 @@
 								<span class="image main"><img src="images/Resume.png" alt="" /></span>
 							</article>
 
+						<!-- About Me -->
+							<article id="about-me">
+								<h2 class="major">About Me</h2>
+								<p>
+									Hey there, my name is Robert Penrod. I enjoy making things and going through the creative problem solving process. I've programmed in C#, C++, Java, JavaScript
+									 I've made a few games in Unity and some neat projects in Java as well as dabbled in some web development such as the website before you.
+								</p>
+							</article>
+
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								
+								<p>Email: robertpenrod37@gmail.com</p>
+
 								<ul class="icons">
 									<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -108,7 +119,6 @@
 								</p>
 
 								<iframe frameborder="0" src="https://itch.io/embed/802388?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=5DB0D7&amp;border_color=363636" width="208" height="167"><a href="https://hyperspace-wizard.itch.io/spellbound">Spellbound by Hyperspace Wizard</a></iframe>
-
 							</article>
 
 							<article id="project-phaser" class="project-article">
@@ -138,7 +148,6 @@
 								</p>
 
 								<iframe frameborder="0" src="https://itch.io/embed/738983?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=5DB0D7&amp;border_color=363636" width="208" height="167"><a href="https://hyperspace-wizard.itch.io/arborium">Arborium by Hyperspace Wizard</a></iframe>
-
 							</article>
 
 							<!--Smart Dots-->
@@ -156,6 +165,23 @@
 								<a target="_blank" href="https://github.com/RobertPenrod/Smart-Dots">GitHub Repository</a>
 							</article>
 
+							<!-- Hyper Drone -->
+							<article id="project-hyper_drone" class="project-article">
+								<h2 class="major">Hyper Drone</h2>
+
+								<video autoplay muted loop>
+									<source src="projects/Hyper Drone/Hyper Drone Demo.mp4" type="video/mp4"/>
+									Your browser does not support the video tag.
+								</video>
+
+								<p>
+									"Hyper Drone" is a game I developed in 9 hours for the <a target="_blank" href="https://itch.io/jam/triple-trijam-2020">"Triple-Trijam" game jam</a>. This jam had 3 themes: Chain Reaction, Negative Feedback Loop, and Novel Twist on a Classic Game. I developed an asteroid inspired game where the asteroids can run into one another and split into smaller asteroids, resulting in a chain reaction debris field that the player must navigate around. The player spawns in the center of a large circle and must journey to the border of it to win the game. To have so many asteroid on screen I had to learn about and implement object pooling. As the player navigates away from the center towards the goal the more numerous and varied the asteroids are that spawn. 
+								</p>
+
+								<iframe frameborder="0" src="https://itch.io/embed/688329?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=5DB0D7&amp;border_color=363636" width="208" height="167"><a href="https://hyperspace-wizard.itch.io/hyper-drone">Hyper Drone by Hyperspace Wizard</a></iframe>
+
+							</article>
+
 							<!--Manufacturing Mayhem-->
 							<article id="project-manufacturing_mayhem" class="project-article">
 								<h2 class="major">Manufacturing Mayhem</h2>
@@ -169,7 +195,6 @@
 								</p>
 
 								<iframe frameborder="0" src="https://itch.io/embed/570054?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=5DB0D7&amp;border_color=363636" width="208" height="167"><a href="https://hyperspace-wizard.itch.io/direct-production">Manufacturing Mayhem by Hyperspace Wizard</a></iframe>
-
 							</article>
 
 							<!--Mandelbrot Explorer-->
@@ -268,6 +293,20 @@
 
 										<p>
 											Maze solving using evolutionary computation.
+										</p>
+									</div>
+
+									<!--Hyper Drone-->
+									<div class="project-div" onclick="location.href='#project-hyper_drone';">
+										<h3>Hyper Drone</h3>
+
+										<video autoplay muted loop>
+											<source src="projects/Hyper Drone/Hyper Drone Demo.mp4" type="video/mp4"/>
+											Your browser does not support the video tag.
+										</video>
+
+										<p>
+											An asteroids inspired chain reaction game.
 										</p>
 									</div>
 
