--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<!--Project Articles-->
 							<article id="project-spellbound" class="project-article">
 								<h2 class="major">Spellbound</h2>
-								<video autoplay muted loop>
+								<video playsinline autoplay muted loop>
 									<source src="projects/Spellbound/Spellbound_Demo.mp4" type="video/mp4"/>
 									Your browser does not support the video tag.
 								</video>
@@ -123,7 +123,7 @@
 
 							<article id="project-phaser" class="project-article">
 								<h2 class="major">Phaser</h2>
-								<video autoplay muted loop>
+								<video playsinline autoplay muted loop>
 									<source src="projects/Phaser/Phaser Demo.mp4" type="video/mp4"/>
 									Your browser does not support the video tag.
 								</video>
@@ -138,7 +138,7 @@
 
 							<article id="project-arborium" class="project-article">
 								<h2 class="major">Arborium</h2>
-								<video autoplay muted loop>
+								<video playsinline autoplay muted loop>
 									<source src="projects/Arborium/Arborium Demo.mp4" type="video/mp4"/>
 									Your browser does not support the video tag.
 								</video>
@@ -153,7 +153,7 @@
 							<!--Smart Dots-->
 							<article id="project-smart_dots" class="project-article">
 								<h2 class="major">Smart Dots</h2>
-								<video autoplay muted loop>
+								<video playsinline autoplay muted loop>
 									<source src="projects/Smart Dots/Smart Dots Demo.mp4" type="video/mp4"/>
 									Your browser does not support the video tag.
 								</video>
@@ -169,7 +169,7 @@
 							<article id="project-hyper_drone" class="project-article">
 								<h2 class="major">Hyper Drone</h2>
 
-								<video autoplay muted loop>
+								<video playsinline autoplay muted loop>
 									<source src="projects/Hyper Drone/Hyper Drone Demo.mp4" type="video/mp4"/>
 									Your browser does not support the video tag.
 								</video>
@@ -185,7 +185,7 @@
 							<!--Manufacturing Mayhem-->
 							<article id="project-manufacturing_mayhem" class="project-article">
 								<h2 class="major">Manufacturing Mayhem</h2>
-								<video autoplay muted loop>
+								<video playsinline autoplay muted loop>
 									<source src="projects/Manufacturing Mayhem/Manufacturing Mayhem Sample Video.mp4" type="video/mp4"/>
 									Your browser does not support the video tag.
 								</video>
@@ -244,7 +244,7 @@
 									<div class="project-div" onclick="location.href='#project-spellbound';">
 										<h3>Spellbound</h3>
 
-										<video autoplay muted loop>
+										<video playsinline autoplay muted loop>
 											<source src="projects/Spellbound/Spellbound_Demo.mp4" type="video/mp4"/>
 											Your browser does not support the video tag.
 										</video>
@@ -258,7 +258,7 @@
 									<div class="project-div" onclick="location.href='#project-phaser';">
 										<h3>Phaser</h3>
 
-										<video autoplay muted loop>
+										<video playsinline autoplay muted loop>
 											<source src="projects/Phaser/Phaser Demo.mp4" type="video/mp4"/>
 											Your browser does not support the video tag.
 										</video>
@@ -272,7 +272,7 @@
 									<div class="project-div" onclick="location.href='#project-arborium';">
 										<h3>Arborium</h3>
 
-										<video autoplay muted loop>
+										<video playsinline autoplay muted loop>
 											<source src="projects/Arborium/Arborium Demo.mp4" type="video/mp4"/>
 											Your browser does not support the video tag.
 										</video>
@@ -286,7 +286,7 @@
 									<div class="project-div" onclick="location.href='#project-smart_dots';">
 										<h3>Smart Dots</h3>
 
-										<video autoplay muted loop>
+										<video playsinline autoplay muted loop>
 											<source src="projects/Smart Dots/Smart Dots Demo.mp4" type="video/mp4"/>
 											Your browser does not support the video tag.
 										</video>
@@ -300,7 +300,7 @@
 									<div class="project-div" onclick="location.href='#project-hyper_drone';">
 										<h3>Hyper Drone</h3>
 
-										<video autoplay muted loop>
+										<video playsinline autoplay muted loop>
 											<source src="projects/Hyper Drone/Hyper Drone Demo.mp4" type="video/mp4"/>
 											Your browser does not support the video tag.
 										</video>
@@ -314,7 +314,7 @@
 									<div class="project-div" onclick="location.href='#project-manufacturing_mayhem';">
 										<h3>Manufacturing Mayhem</h3>
 
-										<video autoplay muted loop>
+										<video playsinline autoplay muted loop>
 											<source src="projects/Manufacturing Mayhem/Manufacturing Mayhem Sample Video.mp4" type="video/mp4"/>
 											Your browser does not support the video tag.
 										</video>
