Added snowball fight vr peoject.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
 						<!-- Projects -->	
 						
 							<!--Project Articles-->
+							<article id="project-snowball_fight_vr" class="project-article">
+								<h2 class="major">Snowball Fight VR</h2>
+								<video playsinline autoplay muted loop>
+									<source src="projects/Snowball Fight VR/Snowball Fight Demo.mp4" type="video/mp4"/>
+									Your browser does not support the video tag.
+								</video>
+
+								<p>
+									Snowball Fight VR is a game developed in four days for the <a target="_blank" href="https://itch.io/jam/holiday-vr-jam-2020">Holiday VR Jam 2020</a> game jam. The jam's theme was "Winter Holiday" so I developed a snowball fighting game where tha player must build forts to defend themselves and throw snowballs at enemy snowman.
+								</p>
+
+								<iframe frameborder="0" src="https://itch.io/embed/863596?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=5DB0D7&amp;border_color=363636" width="208" height="167"><a href="https://hyperspace-wizard.itch.io/snowball-battle">Snowball Battle by Hyperspace Wizard</a></iframe>
+							</article>
+
 							<article id="project-spellbound" class="project-article">
 								<h2 class="major">Spellbound</h2>
 								<video playsinline autoplay muted loop>
@@ -239,6 +253,20 @@
 -->
 								<!--Project Holder-->
 								<div class="project-holder">
+
+									<!--Snowball Fight VR-->
+									<div class="project-div" onclick="location.href='#project-snowball_fight_vr';">
+										<h3>Snowball Fight VR</h3>
+
+										<video playsinline autoplay muted loop>
+											<source src="projects/Snowball Fight VR/Snowball Fight Demo.mp4" type="video/mp4"/>
+											Your browser does not support the video tag.
+										</video>
+
+										<p>
+											A VR game about building forts and snowball fighting with snowman. This was the first VR project I've made, developed in 4 days. 
+										</p>
+									</div>
 
 									<!--Spellbound-->
 									<div class="project-div" onclick="location.href='#project-spellbound';">
