--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 								</video>
 
 								<p>
-									Snowball Fight VR is a game developed in four days for the <a target="_blank" href="https://itch.io/jam/holiday-vr-jam-2020">Holiday VR Jam 2020</a> game jam. The jam's theme was "Winter Holiday" so I developed a snowball fighting game where tha player must build forts to defend themselves and throw snowballs at enemy snowman.
+									Snowball Fight VR is a game developed in four days for the <a target="_blank" href="https://itch.io/jam/holiday-vr-jam-2020">Holiday VR Jam 2020</a> game jam. The jam's theme was "Winter Holiday" so I developed a snowball fighting game where the player must build forts to defend themselves and throw snowballs at enemy snowman.
 								</p>
 
 								<iframe frameborder="0" src="https://itch.io/embed/863596?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=5DB0D7&amp;border_color=363636" width="208" height="167"><a href="https://hyperspace-wizard.itch.io/snowball-battle">Snowball Battle by Hyperspace Wizard</a></iframe>
