Added Rimor and Waterfowl projects

--- a/index.html
+++ b/index.html
@@ -107,6 +107,37 @@
 						<!-- Projects -->	
 						
 							<!--Project Articles-->
+							<article id="project-waterfowl_abyss" class="project-article">
+								<h2 class="major">Waterfowl Abyss</h2>
+								<video playsinline autoplay muted loop>
+									<source src="projects/Waterfowl Abyss/waterfowl abyss demo.mp4" type="video/mp4"/>
+									Your browser does not support the video tag.
+								</video>
+
+								<p>
+									Waterfowl Abyss is a procedurally generated platforming game developed for the <a target="_blank" href="https://itch.io/jam/jame-gam-8">Jame Gam #8</a> game jam. The theme of this jam was "Abyss" with the restriction that the game must contain a duck. I decided to learn about procedural generation to generate 2D caves to function as the enviroment for the abyss. 
+								</p>
+								<p>
+									I ran into the intresting challenge of making sure that the procedurally generated levels are actually beatable and came up with several tricks to make sure this tends to be the case. The generation always makes certain that there is at least one path to the exit. There were many ocassions durring development where I found cliffs would generate that were too tall to jump up. To counteract this I added a mushroom object that would tend to spawn in areas on the ground with a lot of empty space above them. For situations where a cliff was too steep and a mushroom does not spawn I added the special feather mechanic which functions as a super jump. Super feather plants are made to spawn in dead ends of the caves so that there is a slight reward to finding a dead end rather than pure disapointment or frustration. 
+								</p>
+
+								<iframe frameborder="0" src="https://itch.io/embed/1060580?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=5DB0D7&amp;border_color=363636" width="552" height="167"><a href="https://hyperspace-wizard.itch.io/waterfowl">Waterfowl Abyss by Hyperspace Wizard</a></iframe>
+							</article>
+
+							<article id="project-rimor" class="project-article">
+								<h2 class="major">Rimor</h2>
+								<video playsinline autoplay muted loop>
+									<source src="projects/Rimor/Rimor Demo.mp4" type="video/mp4"/>
+									Your browser does not support the video tag.
+								</video>
+
+								<p>
+									Rimor is a momentum platforming game I developed for <a target="_blank" href="https://itch.io/jam/college-game-jam">College Game Jam 2021</a>. The jam's theme was "Connection" so I developed a momentum based platformer that uses a grappling hook as its main mechanic. 
+								</p>
+
+								<iframe frameborder="0" src="https://itch.io/embed/978659?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=5DB0D7&amp;border_color=363636" width="552" height="167"><a href="https://hyperspace-wizard.itch.io/rimor">Rimor Prototype by Hyperspace Wizard</a></iframe>
+							</article>
+
 							<article id="project-snowball_fight_vr" class="project-article">
 								<h2 class="major">Snowball Fight VR</h2>
 								<video playsinline autoplay muted loop>
@@ -253,6 +284,34 @@
 -->
 								<!--Project Holder-->
 								<div class="project-holder">
+
+									<!--Waterfowl Abyss-->
+									<div class="project-div" onclick="location.href='#project-waterfowl_abyss';">
+										<h3>Waterfowl Abyss</h3>
+
+										<video playsinline autoplay muted loop>
+											<source src="projects/Waterfowl Abyss/waterfowl abyss demo.mp4" type="video/mp4"/>
+											Your browser does not support the video tag.
+										</video>
+
+										<p>
+											A procedurally generated platformer about a duck escaping from the abyss.
+										</p>
+									</div>
+
+									<!--Rimor-->
+									<div class="project-div" onclick="location.href='#project-rimor';">
+										<h3>Rimor</h3>
+
+										<video playsinline autoplay muted loop>
+											<source src="projects/Rimor/Rimor Demo.mp4" type="video/mp4"/>
+											Your browser does not support the video tag.
+										</video>
+
+										<p>
+											A momentum platforming game featuring a grappling hook made in one week.
+										</p>
+									</div>
 
 									<!--Snowball Fight VR-->
 									<div class="project-div" onclick="location.href='#project-snowball_fight_vr';">
