--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								
 								<li><a class="undecorated-link" href="#projects">Projects</a></li>
 								<!-- Original: <li><a class="undecorated-link" href="#resume">Resume</a></li> -->
-								<li><a class="undecorated-link" href="images/Resume.pdf" target="_blank">Resume</a></li>
+								<li><a class="undecorated-link" href="Resume.pdf" target="_blank">Resume</a></li>
 								
 								<!--
 								<li><a target ="_blank" href="https://www.linkedin.com/in/robert-penrod/">LinkedIn</a></li>
@@ -54,9 +54,8 @@
 							<article id="resume">
 								<h2 class="major">Resume</h2>
 								<!--<span class="image main"><img src="images/Resume.png" alt="" /></span>-->
-								<a href="images/Resume.pdf" target="_blank">downlaod</a>
 								<span class="image main">
-										<iframe src="images/Resume.pdf#toolbar=0" width="100%" height="701px" style="overflow: hidden;" scrolling="no"></iframe>
+										<iframe src="Resume.pdf#toolbar=0" width="100%" height="701px" style="overflow: hidden;" scrolling="no"></iframe>
 								</span>
 							</article>
 
