BG changes and project updates

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 							<div class="inner">
 								<h1>Hi, I'm Robert.</h1>
 								<p>
-								I'm a senior at The University of Toledo studying Computer Science and Engineering. 
+									I'm a recent graduate of Computer Science and Engineering from The University of Toledo. 
+								</p>
+								<p>
+									I want to continue to grow my knowledge and experience to expand my capability of developing things that add value to the lives of others.
 								</p>
 							</div>
 						</div>
@@ -288,6 +291,16 @@
 -->
 								<!--Project Holder-->
 								<div class="project-holder">
+									<!--Precipitimter -->
+									<div class="project-div no-mouseUp" onclick="window.open('https:\/\/www.precipitimer.com', '_blank')">
+										<h3>Precipitimer</h3>
+
+										<img class="fractalImage" src="images/Precipitimer.png"/>
+
+										<p>
+											This website counts down to the next precipitation event based on your location.
+										</p>
+									</div>
 
 									<!--Waterfowl Abyss-->
 									<div class="project-div" onclick="location.href='#project-waterfowl_abyss';">
@@ -388,7 +401,7 @@
 									</div>
 
 									<!--Hyper Drone-->
-									<div class="project-div" onclick="location.href='#project-hyper_drone';">
+									<!-- <div class="project-div" onclick="location.href='#project-hyper_drone';">
 										<h3>Hyper Drone</h3>
 
 										<video playsinline autoplay muted loop>
@@ -399,10 +412,10 @@
 										<p>
 											An asteroids inspired chain reaction game.
 										</p>
-									</div>
+									</div> -->
 
 									<!--Manufacturing Mayhem-->
-									<div class="project-div" onclick="location.href='#project-manufacturing_mayhem';">
+									<!-- <div class="project-div" onclick="location.href='#project-manufacturing_mayhem';">
 										<h3>Manufacturing Mayhem</h3>
 
 										<video playsinline autoplay muted loop>
@@ -413,7 +426,7 @@
 										<p>
 											Simple but difficult sorting game.
 										</p>
-									</div>
+									</div> -->
 
 									<!--Mandelbrot Explorer-->
 									<div class="project-div" onclick="location.href='#project-mandelbrot_explorer';">
